Adding to final notebook, did more exploration, code comments in wrangle

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -64,270 +64,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "04a86db4",
+   "cell_type": "markdown",
+   "id": "31694c4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Wrangle The Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3470ce5",
+   "metadata": {},
+   "source": [
+    "## Step 1: Acquire the data\n",
+    "\n",
+    "#### Data was acquired from Zillow database in MySQL Workbench."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d1294a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>parcelid</th>\n",
-       "      <th>airconditioningtypeid</th>\n",
-       "      <th>architecturalstyletypeid</th>\n",
-       "      <th>basementsqft</th>\n",
-       "      <th>bathroomcnt</th>\n",
-       "      <th>bedroomcnt</th>\n",
-       "      <th>buildingclasstypeid</th>\n",
-       "      <th>buildingqualitytypeid</th>\n",
-       "      <th>calculatedbathnbr</th>\n",
-       "      <th>...</th>\n",
-       "      <th>censustractandblock</th>\n",
-       "      <th>logerror</th>\n",
-       "      <th>transactiondate</th>\n",
-       "      <th>airconditioningdesc</th>\n",
-       "      <th>architecturalstyledesc</th>\n",
-       "      <th>buildingclassdesc</th>\n",
-       "      <th>heatingorsystemdesc</th>\n",
-       "      <th>propertylandusedesc</th>\n",
-       "      <th>storydesc</th>\n",
-       "      <th>typeconstructiondesc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1727539</td>\n",
-       "      <td>14297519</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.059063e+13</td>\n",
-       "      <td>0.025595</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1387261</td>\n",
-       "      <td>17052889</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.111001e+13</td>\n",
-       "      <td>0.055619</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11677</td>\n",
-       "      <td>14186244</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.059022e+13</td>\n",
-       "      <td>0.005383</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2288172</td>\n",
-       "      <td>12177905</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.037300e+13</td>\n",
-       "      <td>-0.103410</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>781532</td>\n",
-       "      <td>12095076</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.037461e+13</td>\n",
-       "      <td>-0.001011</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Central</td>\n",
-       "      <td>Single Family Residential</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 68 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id  parcelid  airconditioningtypeid  architecturalstyletypeid  \\\n",
-       "0  1727539  14297519                    NaN                       NaN   \n",
-       "1  1387261  17052889                    NaN                       NaN   \n",
-       "2    11677  14186244                    NaN                       NaN   \n",
-       "3  2288172  12177905                    NaN                       NaN   \n",
-       "4   781532  12095076                    1.0                       NaN   \n",
-       "\n",
-       "   basementsqft  bathroomcnt  bedroomcnt  buildingclasstypeid  \\\n",
-       "0           NaN          3.5         4.0                  NaN   \n",
-       "1           NaN          1.0         2.0                  NaN   \n",
-       "2           NaN          2.0         3.0                  NaN   \n",
-       "3           NaN          3.0         4.0                  NaN   \n",
-       "4           NaN          3.0         4.0                  NaN   \n",
-       "\n",
-       "   buildingqualitytypeid  calculatedbathnbr  ...  censustractandblock  \\\n",
-       "0                    NaN                3.5  ...         6.059063e+13   \n",
-       "1                    NaN                1.0  ...         6.111001e+13   \n",
-       "2                    NaN                2.0  ...         6.059022e+13   \n",
-       "3                    8.0                3.0  ...         6.037300e+13   \n",
-       "4                    9.0                3.0  ...         6.037461e+13   \n",
-       "\n",
-       "   logerror  transactiondate  airconditioningdesc  architecturalstyledesc  \\\n",
-       "0  0.025595       2017-01-01                  NaN                     NaN   \n",
-       "1  0.055619       2017-01-01                  NaN                     NaN   \n",
-       "2  0.005383       2017-01-01                  NaN                     NaN   \n",
-       "3 -0.103410       2017-01-01                  NaN                     NaN   \n",
-       "4 -0.001011       2017-01-01              Central                     NaN   \n",
-       "\n",
-       "   buildingclassdesc  heatingorsystemdesc        propertylandusedesc  \\\n",
-       "0                NaN                  NaN  Single Family Residential   \n",
-       "1                NaN                  NaN  Single Family Residential   \n",
-       "2                NaN                  NaN  Single Family Residential   \n",
-       "3                NaN              Central  Single Family Residential   \n",
-       "4                NaN              Central  Single Family Residential   \n",
-       "\n",
-       "   storydesc  typeconstructiondesc  \n",
-       "0        NaN                   NaN  \n",
-       "1        NaN                   NaN  \n",
-       "2        NaN                   NaN  \n",
-       "3        NaN                   NaN  \n",
-       "4        NaN                   NaN  \n",
-       "\n",
-       "[5 rows x 68 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "cb0c5077",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "remove_columns() missing 1 required positional argument: 'cols_to_remove'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/6m/5f3p8xk954n_z611nvzksq440000gn/T/ipykernel_84549/4128005961.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrangle_zillow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprep_zillow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/codeup-data-science/zillow-clustering-project/wrangle_zillow.py\u001b[0m in \u001b[0;36mprep_zillow\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m    129\u001b[0m     takes all other functions into one for prepping data for explorning'''\n\u001b[1;32m    130\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mremove_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhandle_missing_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_required_column\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m.6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprop_required_row\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m.75\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: remove_columns() missing 1 required positional argument: 'cols_to_remove'"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Acquire function\n",
+    "df = wrangle_zillow.get_zillow()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3721592f",
+   "cell_type": "markdown",
+   "id": "b6da4c4d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this step, I used SQL queries to pull what I wanted from Zillows tables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5547be1b",
+   "metadata": {},
+   "source": [
+    "## Step 2: Prepare Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6934da79",
+   "metadata": {},
+   "source": [
+    "In this step, I created multiple functions that were meant to help me prepare my data for both exploration and modeling.\n",
+    "\n",
+    "<b><color = 'green'> \n"
+   ]
   }
  ],
  "metadata": {
