--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31694c4f",
+   "id": "3b1e3a06",
    "metadata": {},
    "source": [
     "# Wrangle The Data"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3470ce5",
+   "id": "ba26ade8",
    "metadata": {},
    "source": [
     "## Step 1: Acquire the data\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6da4c4d",
+   "id": "c71382ba",
    "metadata": {},
    "source": [
     "In this step, I used SQL queries to pull what I wanted from Zillows tables."
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5547be1b",
+   "id": "28d8a899",
    "metadata": {},
    "source": [
     "## Step 2: Prepare Data"
@@ -110,13 +110,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6934da79",
+   "id": "774c0953",
    "metadata": {},
    "source": [
     "In this step, I created multiple functions that were meant to help me prepare my data for both exploration and modeling.\n",
     "\n",
-    "<b><color = 'green'> \n"
+    "<b><font color = 'green'> handle_missing_values:</b></font> How to handle missing values based on minimum percentage of values for rows and columns\n",
+    "\n",
+    "<b><font color = 'green'> wrangle_zillow:</b></font> The wrangle function has the acquire and handle_missing_values nested in it and meant for exploration.\n",
+    "\n",
+    "Steps implemented: \n",
+    "\n",
+    "    - Get rid of null values in my columns (lose a lot of bulk, nearly no data loss) and redundant columns.\n",
+    "    - For the 'fips' column I both encode the zip codes to the appropriate countys (Los Angeles, Ventura, Orange County) and rename the column to 'County' for readability.\n",
+    "    - Removed outliers to many columns:\n",
+    "       - Bathroom and bedroom count range to 1 - 5\n",
+    "       - Logerror range to 0.5 to -0.31\n",
+    "       - Year built houses older than 1910\n",
+    "       - calculatefinishedsquarefeet range to 650 - 5500\n",
+    "       - taxvalluedollarcnt range to 40000 - 300000\n",
+    "<b><font color = 'green'> split:</b></font> This function splits the data into the 3 sets needed for exploring and statistical tests. I stratify on 'county' in this step.\n",
+    "\n",
+    "<b><font color = 'green'>scale_data:</b></font> This function scales the the 3 split data sets. \n",
+    "\n",
+    "<b><font color = 'green'>wrangle_split_scale:</b></font>  This function combines everything in to one and is meant for modeling. Combines the acquire, wrangling, splitting and scaling."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a0551b7",
+   "metadata": {},
+   "source": [
+    "# Explore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96b75377",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
