--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -65,7 +65,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1e3a06",
+   "id": "4009f223",
+   "metadata": {},
+   "source": [
+    "## Executive Summary:\n",
+    "\n",
+    "\n",
+    "dafjdlfsajfdjkafldakjfkldjalfjdlkfjadlkfjdlakgjd;lkhj29rjojs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "582f1f10",
    "metadata": {},
    "source": [
     "# Wrangle The Data"
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba26ade8",
+   "id": "e8f87b7a",
    "metadata": {},
    "source": [
     "## Step 1: Acquire the data\n",
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "cb0c5077",
    "metadata": {},
    "outputs": [],
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71382ba",
+   "id": "b0f80a03",
    "metadata": {},
    "source": [
     "In this step, I used SQL queries to pull what I wanted from Zillows tables."
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d8a899",
+   "id": "d4d8151c",
    "metadata": {},
    "source": [
     "## Step 2: Prepare Data"
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "774c0953",
+   "id": "31670615",
    "metadata": {},
    "source": [
     "In this step, I created multiple functions that were meant to help me prepare my data for both exploration and modeling.\n",
@@ -129,6 +140,10 @@
     "       - Year built houses older than 1910\n",
     "       - calculatefinishedsquarefeet range to 650 - 5500\n",
     "       - taxvalluedollarcnt range to 40000 - 300000\n",
+    "    - Created bins for new features\n",
+    "        - age (yearbuilt)\n",
+    "        - acres (lotsizesquarefeet)\n",
+    "        - square_feet (calculatedfinishedsquarefeet)\n",
     "<b><font color = 'green'> split:</b></font> This function splits the data into the 3 sets needed for exploring and statistical tests. I stratify on 'county' in this step.\n",
     "\n",
     "<b><font color = 'green'>scale_data:</b></font> This function scales the the 3 split data sets. \n",
@@ -138,16 +153,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0551b7",
+   "id": "05090465",
    "metadata": {},
    "source": [
-    "# Explore"
+    "# Explore\n",
+    "\n",
+    "## The Big Questions: Can clustering help us predict logerror? Can clustering help us beat the baseline?\n",
+    "\n",
+    "Our target variable is logerror, so we will be comparing it to individual features as well as combinations of features (clusters)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd9422b8",
+   "metadata": {},
+   "source": [
+    "# Modeling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b75377",
+   "id": "339fe204",
    "metadata": {},
    "outputs": [],
    "source": []
