--- a/changed this into scratchpad 2 so I didn't have to start over.ipynb
+++ b/changed this into scratchpad 2 so I didn't have to start over.ipynb
@@ -283,6 +283,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28130ad7",
+   "metadata": {},
+   "source": [
+    "Used elbow method to decide K value, they all ended up being 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "e8a0645b",
